Remove `relocateJar` task